ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
  namespace: airflow
spec:
  rules:
    - host: airflow.127.0.0.1.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airflow-webserver 
                port:
                  number: 8080
